[package]
name = "grpc-tutorial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.11"
